k8s/peerprep-chat.yaml
apiVersion: v1
kind: Service
metadata:
  name: peerprep-chat
spec:
  selector:
    app: peerprep-chat
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 8082
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-deployment
spec:
  selector:
    matchLabels:
      app: peerprep-chat
  template:
    metadata:
      labels:
        app: peerprep-chat
    spec:
      containers:
      - name: peerprep-chat
        image: deployment87/dply87:peerprep-chat-v1.3.3
        imagePullPolicy: Always
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
        ports:
        - containerPort: 8082
        livenessProbe:
          httpGet:
            path: /ping
            port: 8082
          initialDelaySeconds: 60
          timeoutSeconds: 10
        readinessProbe:
          httpGet:  
            path: /ping
            port: 8082
          initialDelaySeconds: 60
          timeoutSeconds: 10

# ---

# apiVersion: autoscaling/v2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: chat-hpa
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: chat-deployment
#   minReplicas: 1
#   maxReplicas: 3
#   metrics:
#   - type: Resource
#     resource:
#       name: cpu
#       target:
#         type: Utilization
#         averageUtilization: 50
