k8s/peerprep-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: peerprep-postgres 
spec:
  selector:
    app: peerprep-postgres 
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  selector:
    matchLabels:
      app: peerprep-postgres
  template:
    metadata:
      labels:
        app: peerprep-postgres
    spec:
      containers:
      - name: peerprep-postgres
        image: postgres:latest
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
