k8s/peerprep-question.yaml
apiVersion: v1
kind: Service
metadata:
  name: peerprep-question
spec:
  selector:
    app: peerprep-question
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: question-deployment
spec:
  selector:
    matchLabels:
      app: peerprep-question
  template:
    metadata:
      labels:
        app: peerprep-question
    spec:
      containers:
      - name: peerprep-question
        image: deployment87/dply87:peerprep-question-v1.0.0
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /ping
            port: 8000
        readinessProbe:
          httpGet:
            path: /ping
            port: 8000
