k8s/peerprep-queue.yaml
apiVersion: v1
kind: Service
metadata:
  name: peerprep-queue
  # annotations:
  #   cloud.google.com/network-tier: Standard
spec:
  selector:
    app: peerprep-queue
  ports:
  - protocol: TCP
    port: 8080
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue-deployment
spec:
  selector:
    matchLabels:
      app: peerprep-queue
  template:
    metadata:
      labels:
        app: peerprep-queue
    spec:
      containers:
      - name: peerprep-question
        image: deployment87/dply87:peerprep-queue-v1.3.6
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 10
