k8s/peerprep-rabbitmq.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: peerprep-rabbitmq
  annotations:
    cloud.google.com/network-tier: Standard
spec:
  selector:
    app: peerprep-rabbitmq
  ports:
    - protocol: TCP
      name: port-5672
      port: 5672
    # - protocol: TCP
    #   name: port-15672
    #   port: 15672
  type: LoadBalancer
  loadBalancerIP: 35.213.173.19

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  selector:
    matchLabels:
      app: peerprep-rabbitmq
  template:
    metadata:
      labels:
        app: peerprep-rabbitmq
    spec:
      containers:
      - name: peerprep-rabbitmq
        image: rabbitmq:3-management
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 5672
