k8s/peerprep-user.yaml
apiVersion: v1
kind: Service
metadata:
  name: peerprep-user
spec:
  selector:
    app: peerprep-user
  ports:
  - protocol: TCP
    port: 8001
    targetPort: 8001
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  selector:
    matchLabels:
      app: peerprep-user
  template:
    metadata:
      labels:
        app: peerprep-user
    spec:
      containers:
      - name: peerprep-user
        image: deployment87/dply87:peerprep-user-v1.3.2
        imagePullPolicy: Always
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
        ports:
        - containerPort: 8001
        livenessProbe:
          httpGet:
            path: /ping
            port: 8001
          initialDelaySeconds: 60
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /ping
            port: 8001
          initialDelaySeconds: 60
          timeoutSeconds: 10
      # dnsPolicy: ClusterFirst
