k8s/peerprep-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: peerprep-ingress
  annotations:
    # kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.global-static-ip-name: leetpal-lb
    # networking.gke.io/managed-certificates: managed-cert
    # networking.gke.io/v1beta1.FrontendConfig: "http-to-https"
    # nginx.org/websocket-services: "peerprep-queue, peerprep-session"
    # nginx.ingress.kubernetes.io/upgrade-websocket: "true"
spec:
  defaultBackend:
    service:
      name: peerprep-frontend
      port:
        number: 3000
  rules:
  - host: www.leetpal.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: peerprep-frontend
            port:
              number: 3000
      - pathType: Prefix
        path: /api/question
        backend:
          service:
            name: peerprep-question
            port:
              number: 8000
      - pathType: Prefix
        path: /api/users
        backend:
          service:
            name: peerprep-user
            port:
              number: 8001
      - pathType: Prefix
        path: /queue
        backend:
          service:
            name: peerprep-queue
            port:
              number: 8080
      - pathType: Prefix
        path: /api/history
        backend:
          service:
            name: peerprep-history
            port:
              number: 8003
      - pathType: Prefix
        path: /ws
        backend:
          service:
            name: peerprep-session
            port:
              number: 8250
      - pathType: Prefix
        path: /api/session
        backend:
          service:
            name: peerprep-session
            port:
              number: 8251
      - pathType: Prefix
        path: /chat
        backend:
          service:
            name: peerprep-chat
            port:
              number: 8082
      - pathType: Prefix
        path: /create-chatroom
        backend:
          service:
            name: peerprep-chat
            port:
              number: 8082
      - pathType: Prefix
        path: /api/codeExecution
        backend:
          service:
            name: peerprep-codeexec
            port:
              number: 8420
  - host: leetpal.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: peerprep-frontend
            port:
              number: 3000
